@@ -1761,6 +1761,7 @@ function ShowCounterLog(id,name,switchtype)
             formatter: function() {
 										var unit = {
 																'Usage': 'kWh',
+																'Total_Usage': 'kWh',
 																'Return': 'kWh',
 																'Gas': 'm3',
 																'Water': 'm3'
@@ -1840,6 +1841,7 @@ function ShowCounterLog(id,name,switchtype)
             formatter: function() {
 										var unit = {
 																'Usage': 'kWh',
+																'Total_Usage': 'kWh',
 																'Return': 'kWh',
 																'Gas': 'm3',
 																'Water': 'm3'
